# spiritual_transcripts

./: .env.example  .gitignore  README.md  pyproject.toml  sample_1.json  sample_2.json  sample_3.json
prompts/: segment_modules_prompt.txt
src/spiritual_transcript_pipeline/: cli.py  config.py  cutter.py  export_transcript_as_pdf.py  ffmpeg_utils.py  langchain_workflows.py  llm_clients.py  model_manager.py  models.py  segmentation.py  transcript.py  transcript_v2.py
src/spiritual_transcript_pipeline.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
